--- a/home.html
+++ b/home.html
@@ -1,5 +1,5 @@
 <div id="dropArea" class="mapBox">
-	<img id="map" class="absolutePos" src="http://i.imgur.com/YbzANlL.png">
+	<img id="map" class="absolutePos" src="{{mapUrl}}">
 	
 	<!--Draw tile names-->
 	<div ng-repeat="(yIndex,row) in rows" class="glowBoxIndent absolutePos" ng-style="{top: determineGlowY(yIndex)}">
@@ -7,7 +7,7 @@
 	</div>
 	
 	<!--Draw characters-->
-	<div ng-repeat="char in charaData">
+	<div ng-repeat="(cIndex,char) in charaData">
 		<div id="{{cIndex}}" ng-if="validPosition(char.position)" ng-click="displayData(cIndex)" class="absolutePos charDiv hoverImage" title="{{char.position}}" ng-style="{top: determineCharY(char.position), left: determineCharX(char.position)}">
 			<!--Paired unit sprite-->
 			<div ng-if="isPaired(char.pairUpPartner)" class="charDiv mapCharOffsetLeft">
@@ -42,123 +42,5 @@
 			<span class="boldText popOutText" style="margin-top:5px">{{char.name}}</span><br>
 			<span class="popOutText">Lv. {{char.level}} {{char.class}}</span>
 		</div>
-		<!--HP-->
-		<div class="infoElement darkTan tanText enemyHpMovPos" style="left:5px;width:92px;">
-			<span class="enemyStatLabel">HP</span>
-			<span class="indentedEnemyHPStat">{{char.currHp}}/{{char.maxHp}}</span>
-		</div>
-		<!--Movement-->
-		<div class="infoElement darkTan tanText enemyHpMovPos" style="left:103px;width:87px">
-			<span class="enemyStatLabel">Mov</span>
-			<span class="indentedEnemyStat">{{char.mov}}</span>
-		</div>
-		<!--Attack-->
-		<div class="infoElement darkTan tanText enemyAtkHitPos" style="top:72px">
-			<span class="enemyStatLabel">Atk</span>
-			<span class="indentedEnemyStat" ng-if="checkRate(char.atk)">{{char.atk}}</span>
-			<span class="indentedEnemyStat" ng-if="!checkRate(char.atk)">-</span>
-		</div>
-		<!--Critical-->
-		<div class="infoElement darkTan tanText enemyAvoCritPos" style="top:72px">
-			<span class="enemyStatLabel">Crit</span>
-			<span class="indentedEnemyStat" ng-if="checkRate(char.crit)">{{char.crit}}</span>
-			<span class="indentedEnemyStat" ng-if="!checkRate(char.crit)">-</span>
-		</div>
-		<!--Hit-->
-		<div class="infoElement darkTan tanText enemyAtkHitPos" style="top:96px">
-			<span class="enemyStatLabel">Hit</span>
-			<span class="indentedEnemyStat" ng-if="checkRate(char.hit)">{{char.hit}}</span>
-			<span class="indentedEnemyStat" ng-if="!checkRate(char.hit)">-</span>
-		</div>
-		<!--Avoidance-->
-		<div class="infoElement darkTan tanText enemyAvoCritPos" style="top:96px">
-			<span class="enemyStatLabel">Avo</span>
-			<span class="indentedEnemyStat" ng-if="checkRate(char.avo)">{{char.avo}}</span>
-			<span class="indentedEnemyStat" ng-if="!checkRate(char.avo)">-</span>
-		</div>
-		<!--Shields-->
-		<div class="infoElement darkTan enemyShieldsPos" title="Dual Guard Shields">
-			<div style="position: relative; left: 52px; top: 1px;">
-				<div ng-repeat="val in [2,4,6,8,10]" style="display: block; float: left">
-					<img ng-src="{{checkShields(val, char.shields)}}">
-				</div>
-			</div>
-		</div>
-		
-		<!--Skill Gems-->
-		<!--ng-mouseover and ng-mouseleave trigger the appearance of the info box for each skill-->
-		<div ng-repeat="skill in char.skills" class="infoElement hoverImage enemyGemPos" ng-mouseover="skillHoverIn(cIndex, $index)" ng-mouseleave="skillHoverOut(cIndex, $index)" ng-style="{left: fetchESklHorzPos($index)}">
-			<img ng-src="{{fetchSkillImage(skill.name, char.level, $index)}}">
-		</div>
-		
-		<!--Enemy Stats (Str/Mag/Skl/Etc)-->
-		<div ng-repeat="stat in statsList" class="infoElement darkTan tanText enemyStatPos hoverBrown" ng-mouseover="statHoverIn(cIndex, stat[0])" ng-mouseleave="statHoverOut(cIndex, stat[0])" ng-style="{top: fetchEStatVerticalPos($index)}">
-			<span class="enemyStatLabel">{{stat[0]}}</span>
-			<span class="indentedEnemyStat" ng-style="{color: determineStatColor(cIndex, $index, stat[0])}">{{char[stat[0]]}}</span>
-		</div>
-		
-		<!--Inventory-->
-		<div ng-repeat="weapon in char.inventory" ng-mouseenter="weaponHoverIn(cIndex, $index)" ng-mouseleave="weaponHoverOut(cIndex, $index)" class="infoElement redText hoverTan enemyInventoryBoxPos" ng-class="$index == 0 ? 'lightTan' : 'paleTan'" ng-style="{top: fetchEWeaponVerticalPos($index)}">
-			<span class="indentedEWeaponIcon" ng-if="validWeapon(weapon.name)"><img ng-src="{{getWeaponClassIcon(weapon.class)}}"/></span>
-			<span class="indentedEnemyItem" ng-if="validWeapon(weapon.name)">{{weapon.name}}</span>
-			<div class="enemyWeaponEffectIcons">
-				<img ng-if="weaponEffective(weapon.effect,'armor')" src="IMG/eff_armor.png">
-				<img ng-if="weaponEffective(weapon.effect,'flier')" src="IMG/eff_flying.png">
-				<img ng-if="weaponEffective(weapon.effect,'beast')" src="IMG/eff_beast.png">
-				<img ng-if="weaponEffective(weapon.effect,'dragon')" src="IMG/eff_dragon.png">
-				<img ng-if="weaponEffective(weapon.effect,'monster')" src="IMG/eff_monster.png">
-			</div>
-		</div>
-		
-		<!--Weapon ranks-->
-		<div ng-repeat="w in char.weaponRanks" class="infoElement enemyWeaponRankPos" ng-style="{left: fetchEWpnRankHorzPos($index)}">
-			<span ng-if="existsWeapon(w.class)" title="{{w.class}} Rank" style="position:relative">
-				<img ng-src="{{weaponIcon(w.class)}}" style="display:inline-block">
-				<div class="weaponRankLtrPos redText">{{w.rank}}</div>
-			</span>
-		</div>
-		
-		<!--Skill Gem Info Boxes-->
-		<div ng-repeat="skill in char.skills">
-			<div ng-if="skillHoverOn(cIndex, $index) && validSkill(skill.name)" class="infoElement green whiteText enemySkillGemInfoPos" ng-style="{left: fetchESklDescHorzPos($index)}">
-				<div class="boldText popOutText popOutHeader">{{skill.name}}</div>
-			<div class="popOutText popOutBody">{{skill.desc}}</div>
-			</div>
-		</div>
-		
-		<!--Weapon Description Boxes-->
-		<div ng-repeat="weapon in char.inventory">
-			<div class="infoElement green whiteText enemyInventoryInfoPos" ng-if="weaponHoverOn(cIndex, $index) && validWeapon(weapon.name)" ng-style="{top: fetchEWpnDescVerticalPos($index)}">
-				<div class="popOutText itemNamePos boldText">{{formatWeaponName(weapon.name)}}</div>
-				<div class="popOutText itemRankPos">
-					<span ng-if="hasWeaponRank(weapon.rank)">{{weapon.rank}} -</span>
-					{{weapon.class}}
-				</div>
-				<div class="customDivider" style="top:22px"></div>
-				<div ng-if="notItem(weapon.type)">
-					<div class="popOutText itemMightPos">Might: {{weapon.might}}</div>
-					<div class="popOutText itemMightPos" style="left:80px">Hit: {{weapon.hit}}</div>
-					<div class="popOutText itemMightPos" style="right:0px">Crit: {{weapon.crit}}</div>
-					<div class="popOutText itemWeightPos">Avo: {{weapon.avo}}</div>
-					<div class="popOutText itemWeightPos" style="left:80px">Dodge: {{weapon.dodge}}</div>
-					<div class="popOutText itemWeightPos" style="right:0px">Range: {{weapon.range}}</div>
-					<div class="customDivider" style="top:58px"></div>
-				</div>
-				<div class="popOutText italicText" ng-style="{top: setDescriptionLoc(weapon.type)}">{{weapon.note}}</div>
-			</div>
-		</div>
-		
-		<!--Stat Info Boxes (Modifiers)-->
-		<div ng-repeat="stat in statsList">
-			<div ng-if="statHoverOn(cIndex, stat[0])" class="infoElement green whiteText eStatInfoPos" ng-style="{top: stat[3]}">
-				<div class="popOutText popOutHeader">
-					<span>Base value: {{calcBaseStat(cIndex, stat[0])}}<br></span>
-					<span ng-if="validDebuff(char[stat[0]+'Buff'])">Buff/Debuff: {{char[stat[0]+"Buff"]}}<br></span>
-					<span ng-if="validDebuff(char['w'+stat[0]+'Buff'])">{{char.equippedWeapon}}: {{char["w"+stat[0]+"Buff"]}}<br></span>
-					<span ng-if="validDebuff(char['p'+stat[0]+'Buff'])">Pair-up: +{{char["p"+stat[0]+"Buff"]}}</span>
-				</div>
-			</div>
-		</div>
-
 	</div>
 </div>
