--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
   	<!--Set pages attributes-->
   	<link rel="icon" type="image/x-icon" href="IMG/favicon.ico">
-  	<title>RE Team G Map</title>
+  	<title>RE Team E Map</title>
   	
   	<!--Load AngularJS-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.7/angular.min.js"></script>
