--- a/auth.html
+++ b/auth.html
@@ -7,6 +7,11 @@
 		<button class="authButton" ng-show="!ready"><img src="IMG/loading.gif"></button>
 		<button class="authButton" ng-click="loadAPI(event)" ng-show="ready">LOAD MAP</button>
 	</div>
+	<div id="unavailable-div" class="authBox">
+		<div class="displayUnavailable">
+			Sorry, the map is currently down for maintenance. Please check back later!
+		</div>
+	</div>
 	<div id="loading-div" class="authBox">
 		<div class="displayLoading">
 			<img ng-src="{{loadingIcon}}"><br>
@@ -14,8 +19,4 @@
 			<progress id="progress" max="100"></progress>
 		</div>
 	</div>
-	<!--<button class="surveyButton" ng-mouseenter="survey=true" ng-mouseleave="survey=false" ng-click="openSurvey()">!</button>
-	<div class="surveyFlag stretchLeft" ng-show="survey">
-		<div style="margin-top:12px">Fill out the feedback survey</div>
-	</div> -->
 </div>
