Fixed background not covering whole window

--- a/home.html
+++ b/home.html
@@ -1,3 +1,4 @@
+<div class="backgroundBox"></div>
 <div id="dropArea" class="mapBox">
 	<img id="map" class="absolutePos" src="{{mapUrl}}">
 	
@@ -21,6 +22,7 @@
 			<div class="healthBarBack"></div>
 			<div class="healthBarFront" ng-class="isChar(cIndex) ? 'skyBlue' : 'red'" ng-style="{width:((char.currHp/char.maxHp)*28)+'px'}"></div>
 			<div class="healthBarBorder"></div>
+			<!--Unit icons-->
 			<div ng-if="isPairedFront(char.pairUpPartner, char.stance)" class="pairUpIcon"><img src="IMG/shield_pairup.png"></div>
 			<div ng-if="isBoss(char.unitType)" class="pairUpIcon"><img src="IMG/shield_boss.png"></div>
 			<div ng-if="canTalk(char.UnitType)" class="enemyTalkBalloon"><img src="IMG/talk.gif"></div>
