--- a/home.html
+++ b/home.html
@@ -25,7 +25,7 @@
 			<!--Unit icons-->
 			<div ng-if="isPairedFront(char.pairUpPartner, char.stance)" class="pairUpIcon"><img src="IMG/shield_pairup.png"></div>
 			<div ng-if="isBoss(char.unitType)" class="pairUpIcon"><img src="IMG/shield_boss.png"></div>
-			<div ng-if="canTalk(char.UnitType)" class="enemyTalkBalloon"><img src="IMG/talk.gif"></div>
+			<div ng-if="canTalk(char.unitType)" class="enemyTalkBalloon"><img src="IMG/talk.gif"></div>
 		</div>
 	</div>
 	
@@ -154,7 +154,7 @@
 					<div class="popOutText itemWeightPos" style="right:0px">Range: {{weapon.range}}</div>
 					<div class="customDivider" style="top:58px"></div>
 				</div>
-				<div class="popOutText scroll-up" ng-style="{top: setDescriptionLoc(weapon.class), height: setItemDescHeight(weapon.class)}">
+				<div class="popOutText" ng-class="{'scroll-up' : textTooLong(weapon.effect, weapon.desc)}" ng-style="{top: setDescriptionLoc(weapon.class), height: setItemDescHeight(weapon.class)}">
 					<p>
 						<span class="italicText">{{weapon.effect}}</span>
 						<span ng-if="weapon.effect.length > 0"><br /></span>
