--- a/home.html
+++ b/home.html
@@ -43,8 +43,8 @@
 			</div>
 		</div>
 		<!--Name-->
-		<div class="infoElement whiteText enemyNamePos" ng-class="isChar(cIndex) ? 'navy' : 'bloodRed'" style="text-align: center">
-			{{char.name}}
+		<div class="infoElement whiteText enemyNamePos" ng-class="isChar(cIndex) ? 'navy' : 'bloodRed'" ng-style="{'font-size' : getCharNameFontSize(char.name)}">
+			<div style="vertical-align: middle;">{{char.name}}</div>
 		</div>
 		<!--Class-->
 		<div class="infoElement paleTan redText enemyClassPos">
@@ -113,7 +113,7 @@
 		<!--Inventory-->
 		<div ng-repeat="weapon in char.inventory" ng-mouseenter="weaponHoverIn(cIndex, $index)" ng-mouseleave="weaponHoverOut(cIndex, $index)" class="infoElement redText hoverTan itemsPos paleTan" ng-style="{top: fetchEWeaponVerticalPos($index)}">
 			<span class="indentedWeaponIcon" ng-if="validWeapon(weapon.name)"><img ng-src="{{weapon.spriteUrl}}" style="height:16px; width:16px;"/></span>
-			<span class="indentedWeaponName" ng-if="validWeapon(weapon.name)">{{weapon.name}}</span>
+			<span class="indentedWeaponName" ng-if="validWeapon(weapon.name)" ng-style="{'font-size' : getWeaponNameFontSize(weapon.name)}">{{weapon.name}}</span>
 			<div class="weaponEffectIcons">
 				<img ng-if="weaponEffective(weapon.effective,'armor')" src="IMG/eff_armor.png">
 				<img ng-if="weaponEffective(weapon.effective,'flying')" src="IMG/eff_flying.png">
