--- a/home.html
+++ b/home.html
@@ -70,7 +70,7 @@
 		<!--Movement-->
 		<div class="infoElement paleTan redText movExpPos" style="top:97px;">
 			<span class="indentedExpMovLabel"><img src="IMG/movement.png" style="display:inline-block"></span>
-			<span class="indentedExpMovText">{{char.mov}}</span>
+			<span class="indentedExpMovText">{{char.pMovBuff}}</span>
 		</div>
 		<!--HP-->
 		<div class="infoElement darkTan tanText enemyHpPos">
